devops/docker/docker_multi_service_application/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379



---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  clusterIP: None  # makes it headless
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
